--- a/style.css
+++ b/style.css
@@ -109,10 +109,10 @@ body {
     color: white;
     font-size: 18px;
     font-family: "inter";
-    margin: 20px 100px;
+    margin: 100px 100px;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 #answers input {
@@ -124,12 +124,13 @@ input[type="radio"] {
     display: none;
 }
 
-.label-input {
+label {
     display: inline-block;
-    margin: 40px 40px;
+    margin: 60px 200px;
     text-align: center;
     height: fit-content;
-    width: 150px;
+    width: fit-content;
+    width: 200px;
     background-color: transparent;
     color: white;
     border-radius: 5px;
@@ -138,7 +139,7 @@ input[type="radio"] {
     padding: 20px 10px;
 }
 
-input[type="radio"]:checked + .label-input {
+input[type="radio"]:checked + label {
     background-color: #d20094;
 }
 
@@ -167,4 +168,13 @@ input[type="radio"]:checked + .label-input {
     font-family: "outfit";
     font-weight: 300;
     font-size: 60px;
+}
+
+#timer {
+    display: flex;
+    color: white;
+    justify-content: end;
+    margin-top: -850px;
+    margin-right: 100px;
+    font-size: 30px;
 }
