--- a/style.css
+++ b/style.css
@@ -142,10 +142,11 @@ input[type="radio"]:checked + label {
 
 #nextQuestion {
     background-color: #00ffff;
-    height: 40px;
+    height: 60px;
     width: 150px;
+    padding: 5px 10px;
     color: rgb(17, 1, 17);
-    font-size: 16px;
+    font-size: 20px;
     border: #00ffff;
     border-radius: 10px;
     cursor:pointer;
