--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 #logo {
     margin-top: 40px;
     margin-left: 100px;
-
+    display: flex;
+    align-items: center;
 }
 
 .logo {
@@ -170,10 +171,10 @@ input[type="radio"]:checked + label {
 }
 
 #timer {
-    display: flex;
+    display: inline-block;
     color: white;
-    justify-content: end;
-    margin-top: -850px;
-    margin-right: 100px;
     font-size: 30px;
+    font-weight: 600;
+    margin-left: 950px;
+    font-family: "outfit";
 }
